<resources>
    <string name="app_name">Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">公司邮箱</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_TM">商标不合法</string>
    <string name="error_invalid_phone">无效的电话号码</string>
    <string name="error_invalid_age">从小到大填写年龄(3-80)</string>
    <string name="error_invalid_describe">字数太多</string>
    <string name="error_invalid_confirm">两次密码不一样</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_match">账号与密码不匹配</string>
    <string name="Timeout">请求超时</string>
    <string name="error_MySQL">数据库查询异常</string>
    <string name="success">欢迎用户</string>
    <!-- Strings related to register education -->
    <string name="education_id">注册商标</string>
    <string name="confirm_password">确认密码</string>
    <string name="age">教育适合年龄</string>
    <string name="describe">简短介绍</string>
    <string name="address">公司地址</string>
    <string name="domain">教育领域(美术等)</string>
    <string name="phone">公司电话</string>
    <string name="min">最小</string>
    <string name="max">最大</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_register_education">注册为教育机构</string>
    <string name="title_activity_superior">SuperiorActivity</string>
    <string name="title_home">Home</string>
    <string name="data_request">数据加载中...</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">notifications</string>

    <string name="domain2">教育领域</string>

    <!--评论-->
    <string name="comment_id">评论ID</string>
    <string name="comment_date">评论时间</string>
    <string name="comment">评论内容</string>
    <string name="discuss">请输入用户ID</string>
    <!---->
    <string name="upload">上传课程图片</string>
    <string name="issue">发布公告</string>
    <string name="issueHomeWork">发布作业</string>
    <string name="inputCourseId">输入课程id</string>
    <string name="done">完成</string>
    <string name="done2">发布</string>
    <string name="board">公告板</string>
    <string name="applyVideo">试听申请</string>
    <string name="purchase">购买</string>
</resources>
